<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModuleDetails"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewMC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textviewMC" />

    <TextView
        android:id="@+id/textViewMN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textviewMN" />

    <TextView
        android:id="@+id/textViewAY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textviewAY" />

    <TextView
        android:id="@+id/textViewSem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textviewSem" />

    <TextView
        android:id="@+id/textViewMCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textviewMCredit" />

    <TextView
        android:id="@+id/textViewVenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textviewVenue" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />
</LinearLayout>